# hector_ground_truth_gazebo_plugins_ros2

hector_ground_truth_gazebo_plugins/: CMakeLists.txt  package.xml
hector_ground_truth_gazebo_plugins/include/hector_ground_truth_gazebo_plugins/: elevation_map_ground_truth_plugin.hpp
hector_ground_truth_gazebo_plugins/src/: elevation_map_ground_truth_plugin.cpp  map_bag_writer.cpp
hector_ground_truth_gazebo_plugins/worlds/: .gitignore  syn_ramps.dae  syn_ramps.world
hector_ground_truth_gazebo_plugins_msgs/: CMakeLists.txt  package.xml
hector_ground_truth_gazebo_plugins_msgs/srv/: GenerateGroundTruth.srv
