<?xml version="1.0"?>
<package format="3">
  <name>hector_ground_truth_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>The hector_ground_truth_gazebo_plugins package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>rclcpp</depend>
  <depend>gz_common_vendor</depend>
  <depend>gz_sim_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_rendering_vendor</depend>
  <depend>gz_sensors_vendor</depend>
  <depend>map_bag</depend>
  <depend>map_bag_msgs</depend>
  <depend>map_bag_ros</depend>
  <depend>std_msgs</depend>
  <depend>hector_ground_truth_gazebo_plugins_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
